--- a/app/globals.css
+++ b/app/globals.css
@@ -4,17 +4,21 @@
 
 @layer base{
   body{
-    @apply text-slate-200  bg-slate-900
+    @apply text-slate-200  bg-slate-900 relative;
   }
 
   button {
-    @apply hover:scale-110 ease-in-out duration-[0.5s]
+    @apply  hover:scale-110 ease-in-out duration-[0.5s]
+  }
+
+  input {
+    @apply py-2 px-4 bg-slate-600 rounded-xl
   }
 }
 
 @layer utilities {
   .btn {
-    @apply px-4 py-2 text-sm  capitalize rounded-lg 
+    @apply self-start px-4 py-2 text-sm  capitalize rounded-lg 
   }
 
   .btn-danger {
@@ -28,4 +32,10 @@
   .btn-primary-outline {
     @apply border border-lime-400 text-lime-400 
   }
+  
+  .input-group {
+    @apply flex flex-col gap-4
+  }
+  
+
 }
